# ecomm-prod-assistant

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  architecture_diagram.md  pyproject.toml  requirements.txt  scrapper_ui.py  versions.py
chatgpt_ui/: index.html  prompt.txt  style.css
data/: product_reviews.csv
k8/: deployment.yaml
notebook/: test.ipynb
prod_assistant/config/: config.yaml
prod_assistant/etl/: data_ingestion.py  data_scrapper.py
prod_assistant/evaluation/: ragas_eval.py
prod_assistant/mcp_servers/: client.py  product_search_server.py
prod_assistant/prompt_library/: prompts.py
prod_assistant/retriever/: retrieval.py
prod_assistant/router/: main.py
prod_assistant/utils/: config_loader.py  model_loader.py
prod_assistant/workflow/: agentic_rag_workflow.py  agentic_rag_workflow_v1.py  agentic_rag_workflow_with_mcp.py
