[project]
name = "ecomm-prod-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "langchain==0.3.27",
    "python-dotenv==1.1.1",
    "streamlit==1.49.1",
]

# Optional: authors, license
authors = [{ name = "Arun Subramanian" }]
license = { text = "MIT" }

# Optional: CLI command
[project.scripts]
ecomm-assistant = "prod_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prod_assistant*"]